# honeycomb

./: .gitignore  CMakeLists.txt  DESIGN  Makefile  README.md  dummy.c  z-closure-marshal.zco  z-closure.zco  z-log.c  z-log.h  z-log.zco  z-map-iter.c  z-map-iter.h  z-map-test.c  z-map.c  z-map.h  z-map.zco  z-object.c  z-object.h  z-object.zco  z-string-iter.c  z-string-iter.zco  z-string-test.c  z-string.c  z-string.h  z-string.zco  z-value.zco  z-vector-iter.c  z-vector-iter.zco  z-vector-test.c  z-vector.c  z-vector.zco  zco-test.c  zco-test.h  zco-type.c  zco-type.h  zco.c  zco.h  zco.l  zco.y
apps/: CMakeLists.txt
apps/core-test/: CMakeLists.txt  main.c  network-test.c  signal-test.c  z-map-test.c  z-string-test.c  z-test-derived-object.zco  z-test-object.zco  z-vector-test.c
apps/gateway/: CMakeLists.txt  main.c  z-gateway-application.zco
apps/test/: CMakeLists.txt  main.c  network-test.c  signal-test.c  z-map-test.c  z-set-test.c  z-string-test.c  z-test-derived-object.zco  z-test-object.zco  z-vector-test.c  zco-test.h
apps/toolkit-test/: CMakeLists.txt  main.c  zco-toolkit-test.h  ztk-int32-test.c  ztk-string-test.c
base/: CMakeLists.txt  z-bind-util.c  z-bind-util.zco  z-c-closure-marshal.zco  z-event-loop-linux.zco  z-event-loop.zco  z-in-out.zco  zco-app-context.c  zco-app-context.h
bootstrap/: CMakeLists.txt  z-bind-protected.h  z-bind.c  z-bind.h  z-buddy-memory-allocator-protected.h  z-buddy-memory-allocator.c  z-buddy-memory-allocator.h  z-closure-marshal-protected.h  z-closure-marshal.c  z-closure-marshal.h  z-closure-protected.h  z-closure.c  z-closure.h  z-default-memory-allocator.c  z-default-memory-allocator.h  z-default-object-tracker-protected.h  z-default-object-tracker.c  z-default-object-tracker.h  z-event-loop-protected.h  z-event-loop.c  z-event-loop.h  z-file-protected.h  z-file.c  z-file.h  z-flex-memory-allocator.c  z-flex-memory-allocator.h  z-framework-events-protected.h  z-framework-events.c  z-framework-events.h  z-map-iter-protected.h  z-map-iter.c  z-map-iter.h  z-map-protected.h  z-map.c  z-map.h  z-memory-allocator-protected.h  z-memory-allocator.c  z-memory-allocator.h  z-object-protected.h  z-object-tracker-protected.h  (+36 more)
core/: CMakeLists.txt  signal-test.c  z-bind.zco  z-buddy-memory-allocator.zco  z-c-closure-marshal.zco  z-closure-marshal.zco  z-closure.zco  z-default-memory-allocator.zco  z-default-object-tracker.zco  z-event-loop.zco  z-file.zco  z-flex-memory-allocator.zco  z-framework-events.zco  z-map-iter.zco  z-map-test.c  z-map.zco  z-memory-allocator.zco  z-object-tracker.zco  z-object.zco  z-simple-memory-allocator.zco  z-slab-memory-allocator.zco  z-string-iter.zco  z-string.zco  z-sys-memory-allocator.zco  z-test-object.zco  z-thread-simple-memory-allocator.zco  z-value.zco  z-vector-iter.zco  z-vector-segment.zco  z-vector.zco  z-zco-source-generator.zco  zco-config.h  zco-context.c  zco-context.h  zco-test.c  zco-test.h  zco-type.c  zco-type.h  zco.l  zco.y
extra/: CMakeLists.txt  z-application.zco  z-bind-util.h  z-bind.zco  z-c-closure-marshal.zco  z-event-loop-linux.zco  z-event-loop-posix.zco  z-event-loop.zco  z-guid.zco  z-i-o-multiplexer.zco  z-in-out-multiplexer.zco  z-net-stream.zco  z-server.zco  z-session-manager.zco  z-set-iter.zco  z-set.zco  z-socket.zco  z-stream.zco  z-worker-group.zco  zco-app-context.c  zco-app-context.h
net/: CMakeLists.txt  z-server.zco  z-socket.zco  z-stream.zco
scripts/: copy-bootstrap  run-fcgi  run-gateway
toolkit/: CMakeLists.txt  z-runtime-context.zco  ztk-console.zco  ztk-int32.zco  ztk-object.zco  ztk-string-iter.zco  ztk-string.zco
widgets/: CMakeLists.txt  z-window.zco
